# meeting-report-generator

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  app.db-test  main.py  pyproject.toml  requirements.txt  setup.sh
alembic/: env.py
alembic/versions/: b8d95e3f3998_create_reports_table.py
app/api/: reports.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  report.py
app/schemas/: report.py
app/services/: pdf_generator.py  report.py  summary.py  transcription.py
app/utils/: file_handler.py
tests/: conftest.py  test_reports.py
